# jpholiday-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  coverage.yml  periodic_unittest.yml  publish.yml  unittest.yml
examples/: basic.rs  dump.rs
src/: astronomy.rs  checker.rs  date.rs  error.rs  holidays.rs  jpholiday.rs  lib.rs  main.rs  model.rs  registry.rs  utils.rs
tests/: basic.rs  class_api.rs  custom_holiday.rs  date_validation.rs  datetime.rs  enforcement_boundary.rs  equinox.rs  global_register.rs  golden_years.rs  issues.rs  poison_recovery.rs  reentrancy.rs  test_year_1971.rs  test_year_2000.rs  test_year_2020.rs
