[package]
name = "jpholiday-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Pure-Rust library to determine Japanese public holidays — a faithful port of the Python jpholiday. 日本の祝日を扱う依存ゼロのRustライブラリ。"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Lalcs/jpholiday"
homepage = "https://github.com/Lalcs/jpholiday"
documentation = "https://docs.rs/jpholiday-rust"
# crates.io の keyword は ASCII のみ許可されるため「祝日」は romaji の "shukujitsu" を用いる。
keywords = ["japan", "holiday", "japanese", "calendar", "shukujitsu"]
categories = ["date-and-time", "localization"]
authors = ["Kazuki Hayashi"]

[lib]
name = "jpholiday"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
