[package]
name = "jpholiday"
version = "0.2.0"
edition = "2024"
rust-version = "1.96"
description = "Pure-Rust library to determine Japanese public holidays. 日本の祝日を扱う依存ゼロのRustライブラリ。"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Lalcs/jpholiday-rust"
homepage = "https://github.com/Lalcs/jpholiday-rust"
documentation = "https://docs.rs/jpholiday"
# crates.io の keyword は ASCII のみ許可されるため「祝日」は romaji の "shukujitsu" を用いる。
keywords = ["japan", "holiday", "japanese", "calendar", "shukujitsu"]
categories = ["date-and-time", "localization"]
authors = ["Kazuki Hayashi"]

[dependencies]

[dev-dependencies]
